优化登录之后用户在页面之中显示的功能，加入用户退出的功能

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -562,7 +562,7 @@
                 </div>
                 <!-- 商品展示的盒子 -->
                 <div class="shop-show-box shop-top-banner last-show clearfix">
-                    <div class="brand-item">
+    <!--                 <div class="brand-item">
                         <a href=""><img class="brand-img"
                                 src="https://d.vpimg1.com/upcb/2020/04/10/47/ias_158651293272055_320x153_90.jpg"
                                 alt=""></a>
@@ -580,7 +580,7 @@
                                 <button type="submit" class="book-notice-btn book-sub">开售提示</button>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
