--- a/src/html/detailInfo.html
+++ b/src/html/detailInfo.html
@@ -357,8 +357,119 @@
         </div>
         <!-- 详情数据 -->
         <div class="fw-detail clearfix">
-            
+
             <div class="placeholder layout clearfix">
+                <!-- 商品推荐组件 -->
+                <div class="recommend">
+                    <div class="recommend-storeInfo">
+                        <a href="javascript:void(0)">
+                            <div class="store-img">
+                                <img src="https://a.vpimg3.com/upload/brandcool/0/34bae8259ad0437587f033957541f91c/10004114/primary.png"
+                                    alt="">
+                            </div>
+                            <div class="re-store">
+                                <div class="re-store-name">FILA</div>
+                                <div class="re-store-des">
+                                    FILA品牌1911年在意大利诞生，逐步发展成传承百年运动基因的高端生活时尚品牌，FILA在国际高端运动品牌中风韵独具，誉满全球，被认为是艺术的代表，奢华的典范。
+                                </div>
+                            </div>
+                            <div class="store-btn">查看品牌</div>
+                        </a>
+                    </div>
+                    <!-- 推荐的商品 热销好货 -->
+                    <div class="recommend-product">
+                        <div class="re-product-title">
+                            热销好货
+                        </div>
+                        <div class="re-brand-wrap">
+                            <div class="re-brand">
+                                <a href="javascript:void(0)">
+                                    <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0330/103/e73d07e1-b716-42d9-8fb5-1df301296105_420_531.jpg"
+                                        alt="">
+                                    <div class="re-product-info">
+                                        <div class="re-product-name">FILA 斐乐男装运动休闲男款时尚圆领男式卫衣百搭舒适针织套头衫</div>
+                                        <div class="re-product-price">¥479</div>
+                                    </div>
+                                </a>
+                                <a href="javascript:void(0)">
+                                    <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0330/103/e73d07e1-b716-42d9-8fb5-1df301296105_420_531.jpg"
+                                        alt="">
+                                    <div class="re-product-info">
+                                        <div class="re-product-name">FILA 斐乐男装运动休闲男款时尚圆领男式卫衣百搭舒适针织套头衫</div>
+                                        <div class="re-product-price">¥479</div>
+                                    </div>
+                                </a>
+                                <a href="javascript:void(0)">
+                                    <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0330/103/e73d07e1-b716-42d9-8fb5-1df301296105_420_531.jpg"
+                                        alt="">
+                                    <div class="re-product-info">
+                                        <div class="re-product-name">FILA 斐乐男装运动休闲男款时尚圆领男式卫衣百搭舒适针织套头衫</div>
+                                        <div class="re-product-price">¥479</div>
+                                    </div>
+                                </a>
+                                <a href="javascript:void(0)">
+                                    <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0330/103/e73d07e1-b716-42d9-8fb5-1df301296105_420_531.jpg"
+                                        alt="">
+                                    <div class="re-product-info">
+                                        <div class="re-product-name">FILA 斐乐男装运动休闲男款时尚圆领男式卫衣百搭舒适针织套头衫</div>
+                                        <div class="re-product-price">¥479</div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="recommend-page">
+                            <div class="re-pre iconfont i-no icon-s-top-arrow"></div>
+                            <div class="re-next iconfont i-has icon-s-down-arrow-copy"></div>
+                        </div>
+                    </div>
+                    <!-- 看了又看 -->
+                    <div class="recommend-product recommend-look">
+                        <div class="re-product-title">
+                            看了又看
+                        </div>
+                        <div class="re-look-wrap">
+                            <div class="re-look">
+                                <a href="javascript:void(0)">
+                                    <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0307/41/ed7dc787-ae65-4fb0-9510-cf45cd75cc16_420_531.jpg"
+                                        alt="">
+                                    <div class="re-product-info">
+                                        <div class="re-product-name">FILA 斐乐男装运动休闲男款时尚圆领男式卫衣百搭舒适针织套头衫</div>
+                                        <div class="re-product-price">¥479</div>
+                                    </div>
+                                </a>
+                                <a href="javascript:void(0)">
+                                    <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0330/103/e73d07e1-b716-42d9-8fb5-1df301296105_420_531.jpg"
+                                        alt="">
+                                    <div class="re-product-info">
+                                        <div class="re-product-name">FILA 斐乐男装运动休闲男款时尚圆领男式卫衣百搭舒适针织套头衫</div>
+                                        <div class="re-product-price">¥479</div>
+                                    </div>
+                                </a>
+                                <a href="javascript:void(0)">
+                                    <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0330/103/e73d07e1-b716-42d9-8fb5-1df301296105_420_531.jpg"
+                                        alt="">
+                                    <div class="re-product-info">
+                                        <div class="re-product-name">FILA 斐乐男装运动休闲男款时尚圆领男式卫衣百搭舒适针织套头衫</div>
+                                        <div class="re-product-price">¥479</div>
+                                    </div>
+                                </a>
+                                <a href="javascript:void(0)">
+                                    <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0330/103/e73d07e1-b716-42d9-8fb5-1df301296105_420_531.jpg"
+                                        alt="">
+                                    <div class="re-product-info">
+                                        <div class="re-product-name">FILA 斐乐男装运动休闲男款时尚圆领男式卫衣百搭舒适针织套头衫</div>
+                                        <div class="re-product-price">¥479</div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="recommend-page">
+                            <div class="re-pre iconfont i-no icon-s-top-arrow"></div>
+                            <div class="re-next iconfont i-has icon-s-down-arrow-copy"></div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="detailTop clearfix">
                     <div class="detailTop-wrap">
                         <ul class="dt-list">
@@ -371,39 +482,53 @@
                     </div>
                 </div>
                 <div class="detail clearfix">
-                    <div class="J-dc-tit-new dc-tit-new" id="J-proShow-scroll"><i class="dc-tit-new-icon"></i><p class="dc-title">商品展示<i class="dc-title-en">IMAGE</i></p></div>
+                    <div class="J-dc-tit-new dc-tit-new" id="J-proShow-scroll"><i class="dc-tit-new-icon"></i>
+                        <p class="dc-title">商品展示<i class="dc-title-en">IMAGE</i></p>
+                    </div>
                     <div class="video-html">
                         <div class="video-play" id="J_QCVideo"></div>
                     </div>
                     <div class="dc-img">
                         <div class="dc-img-detail">
-                                            <div class="img-6xx-bg bg-height">
-                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/42/823ac073-2d2b-48c4-b90c-f3cd5cf9cb58.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/42/823ac073-2d2b-48c4-b90c-f3cd5cf9cb58.jpg">
+                            <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/42/823ac073-2d2b-48c4-b90c-f3cd5cf9cb58.jpg"
+                                    class="J-mer-bigImg"
+                                    data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/42/823ac073-2d2b-48c4-b90c-f3cd5cf9cb58.jpg">
                             </div>
-                                    <div class="img-6xx-bg bg-height">
-                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/113/f736fd67-3aa9-4dba-9510-e61f0f6f0c51.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/113/f736fd67-3aa9-4dba-9510-e61f0f6f0c51.jpg">
+                            <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/113/f736fd67-3aa9-4dba-9510-e61f0f6f0c51.jpg"
+                                    class="J-mer-bigImg"
+                                    data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/113/f736fd67-3aa9-4dba-9510-e61f0f6f0c51.jpg">
                             </div>
-                                    <div class="img-6xx-bg bg-height">
-                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/137/d8a33f95-bcd2-4fc0-868c-8e7f4dfd84c2.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/137/d8a33f95-bcd2-4fc0-868c-8e7f4dfd84c2.jpg">
+                            <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/137/d8a33f95-bcd2-4fc0-868c-8e7f4dfd84c2.jpg"
+                                    class="J-mer-bigImg"
+                                    data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/137/d8a33f95-bcd2-4fc0-868c-8e7f4dfd84c2.jpg">
                             </div>
-                                    <div class="img-6xx-bg bg-height">
-                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/90/5b5956ee-9e67-4978-892e-da58b1488064.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/90/5b5956ee-9e67-4978-892e-da58b1488064.jpg">
+                            <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/90/5b5956ee-9e67-4978-892e-da58b1488064.jpg"
+                                    class="J-mer-bigImg"
+                                    data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/90/5b5956ee-9e67-4978-892e-da58b1488064.jpg">
                             </div>
-                                    <div class="img-6xx-bg bg-height">
-                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/68/bd4eae7e-85ed-4466-b5ac-6964ad4de5d2.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/68/bd4eae7e-85ed-4466-b5ac-6964ad4de5d2.jpg">
+                            <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/68/bd4eae7e-85ed-4466-b5ac-6964ad4de5d2.jpg"
+                                    class="J-mer-bigImg"
+                                    data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/68/bd4eae7e-85ed-4466-b5ac-6964ad4de5d2.jpg">
                             </div>
-                                    <div class="img-6xx-bg bg-height">
-                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/183/133f4b4c-fa9f-42be-ab03-60e3e701002c.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/183/133f4b4c-fa9f-42be-ab03-60e3e701002c.jpg">
+                            <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/183/133f4b4c-fa9f-42be-ab03-60e3e701002c.jpg"
+                                    class="J-mer-bigImg"
+                                    data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/183/133f4b4c-fa9f-42be-ab03-60e3e701002c.jpg">
                             </div>
-                                </div>
+                        </div>
                         <div class="dc-img-con">
-                                </div>
+                        </div>
                         <div class="dc-txt-con">
-                                </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </div>
     <!-- 页脚 -->
