修复首页吸顶动画导致了图片懒加载功能失效

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -56,10 +56,10 @@
         style="background-image: url('http://a.vpimg2.com/upload/flow/2020/04/01/76/15857324937300.jpg');">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><a href="#"><img
+<!--                 <div class="swiper-slide"><a href="#"><img
                             src="https://a.vpimg2.com/upload/flow/2020/04/03/126/15859027753152.jpg" alt=""></a></div>
                 <div class="swiper-slide"><a href=""><img
-                            src="https://a.vpimg2.com/upload/flow/2020/04/02/8/15858157797341.jpg" alt=""></a></div>
+                            src="https://a.vpimg2.com/upload/flow/2020/04/02/8/15858157797341.jpg" alt=""></a></div> -->
             </div>
 
             <!-- 如果需要导航按钮 -->
@@ -206,10 +206,10 @@
                         alt="">
                     <div class="p-list">
                         <div style="margin-left: 24px; position: relative; float: left;" class="item">
-                                <img width="170" height="170"
+                            <img width="170" height="170"
                                 src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/2020/03/18/144/1767dda1-33da-4f63-9fa2-21baae15533a_340x340_90.jpg"
                                 alt="">
-                                
+
                             <img width="100" height="60" style="position: absolute; top: 141px; left: 35px;"
                                 src="https://h2.appsimg.com/b.appsimg.com/upload/mst/2019/09/24/60/mst_ba99110750bad5db7c67755d35373acc_200x120_90.png"
                                 alt="">
@@ -222,7 +222,7 @@
                                 src="https://h2.appsimg.com/b.appsimg.com/upload/mst/2019/10/30/148/mst_a6d967b477ab749178909e31ab420fda_100x36_90.png"
                                 alt="">
                             <span
-                                style="position:absolute; top: 211px; left: 90px; font-size: 16px; background: rgb(255,255,255);color: #000000;">￥59</span> 
+                                style="position:absolute; top: 211px; left: 90px; font-size: 16px; background: rgb(255,255,255);color: #000000;">￥59</span>
                         </div>
                         <div style="margin-left: 20px; position: relative; float: left;" class="item">
                             <img width="170" height="170"
@@ -562,7 +562,7 @@
                 </div>
                 <!-- 商品展示的盒子 -->
                 <div class="shop-show-box shop-top-banner last-show clearfix">
-    <!--                 <div class="brand-item">
+                    <!--                 <div class="brand-item">
                         <a href=""><img class="brand-img"
                                 src="https://d.vpimg1.com/upcb/2020/04/10/47/ias_158651293272055_320x153_90.jpg"
                                 alt=""></a>
