增加详情页面热点图片轮播功能

--- a/src/html/detailInfo.html
+++ b/src/html/detailInfo.html
@@ -382,7 +382,7 @@
                             热销好货
                         </div>
                         <div class="re-brand-wrap">
-                            <div class="re-brand">
+                            <div class="re-brand re-list">
                                 <a href="javascript:void(0)">
                                     <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0330/103/e73d07e1-b716-42d9-8fb5-1df301296105_420_531.jpg"
                                         alt="">
@@ -418,8 +418,8 @@
                             </div>
                         </div>
                         <div class="recommend-page">
-                            <div class="re-pre iconfont i-no icon-s-top-arrow"></div>
-                            <div class="re-next iconfont i-has icon-s-down-arrow-copy"></div>
+                            <div class="re-pre iconfont icon-s-top-arrow icon-btn-disable"></div>
+                            <div class="re-next iconfont icon-s-down-arrow-copy"></div>
                         </div>
                     </div>
                     <!-- 看了又看 -->
@@ -428,7 +428,7 @@
                             看了又看
                         </div>
                         <div class="re-look-wrap">
-                            <div class="re-look">
+                            <div class="re-look re-list">
                                 <a href="javascript:void(0)">
                                     <img src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/603410/2020/0307/41/ed7dc787-ae65-4fb0-9510-cf45cd75cc16_420_531.jpg"
                                         alt="">
@@ -464,8 +464,8 @@
                             </div>
                         </div>
                         <div class="recommend-page">
-                            <div class="re-pre iconfont i-no icon-s-top-arrow"></div>
-                            <div class="re-next iconfont i-has icon-s-down-arrow-copy"></div>
+                            <div class="re-pre iconfont icon-s-top-arrow icon-btn-disable"></div>
+                            <div class="re-next iconfont icon-s-down-arrow-copy"></div>
                         </div>
                     </div>
                 </div>
@@ -473,8 +473,8 @@
                 <div class="detailTop clearfix">
                     <div class="detailTop-wrap">
                         <ul class="dt-list">
-                            <li><a href="javascript:void(0)" class="dt-list-item selected">尺码参数</a></li>
-                            <li><a href="javascript:void(0)" class="dt-list-item">商品展示</a></li>
+                            <li><a href="javascript:void(0)" class="dt-list-item ">尺码参数</a></li>
+                            <li><a href="javascript:void(0)" class="dt-list-item selected">商品展示</a></li>
                             <li><a href="javascript:void(0)" class="dt-list-item">全部口碑</a></li>
                             <li><a href="javascript:void(0)" class="dt-list-item">商品咨询</a></li>
                             <li><a href="javascript:void(0)" class="dt-list-item">关于我们</a></li>
