--- a/src/html/index.html
+++ b/src/html/index.html
@@ -57,10 +57,10 @@
         style="background-image: url('http://a.vpimg2.com/upload/flow/2020/04/01/76/15857324937300.jpg');">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-<!--                 <div class="swiper-slide"><a href="#"><img
+                <div class="swiper-slide"><a href="#"><img
                             src="https://a.vpimg2.com/upload/flow/2020/04/03/126/15859027753152.jpg" alt=""></a></div>
                 <div class="swiper-slide"><a href=""><img
-                            src="https://a.vpimg2.com/upload/flow/2020/04/02/8/15858157797341.jpg" alt=""></a></div> -->
+                            src="https://a.vpimg2.com/upload/flow/2020/04/02/8/15858157797341.jpg" alt=""></a></div>
             </div>
 
             <!-- 如果需要导航按钮 -->
@@ -206,7 +206,7 @@
                         src="https://h2.appsimg.com/b.appsimg.com/upload/mst/2020/03/20/131/mst_059b78e080380aa579bfc02279209beb_2340x714_90.png"
                         alt="">
                     <div class="p-list">
-                        <div style="margin-left: 24px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite flipOutY ">
+                        <div style="margin-left: 24px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite swing ">
                             <img width="170" height="170"
                                 src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/2020/03/18/144/1767dda1-33da-4f63-9fa2-21baae15533a_340x340_90.jpg"
                                 alt="">
@@ -225,7 +225,7 @@
                             <span
                                 style="position:absolute; top: 211px; left: 90px; font-size: 16px; background: rgb(255,255,255);color: #000000;">￥59</span>
                         </div>
-                        <div style="margin-left: 20px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite flipOutY ">
+                        <div style="margin-left: 20px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite swing ">
                             <img width="170" height="170"
                                 src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/600025/2018/0823/63/82f90b55-d07a-478c-b5e9-8edd6085ff45_340x340_90.jpg"
                                 alt="">
@@ -243,7 +243,7 @@
                             <span
                                 style="position:absolute; top: 211px; left: 90px; font-size: 16px; background: rgb(255,255,255);color: #000000;">￥59</span>
                         </div>
-                        <div style="margin-left: 20px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite flipOutY ">
+                        <div style="margin-left: 20px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite swing ">
                             <img width="170" height="170"
                                 src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/999999999/2020/0325/83/081f6a78-7e05-4ae5-abbf-d5d0f4c6bf4d_340x340_90.jpg"
                                 alt="">
@@ -261,7 +261,7 @@
                             <span
                                 style="position:absolute; top: 211px; left: 90px; font-size: 16px; background: rgb(255,255,255);color: #000000;">￥59</span>
                         </div>
-                        <div style="margin-left: 20px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite flipOutY ">
+                        <div style="margin-left: 20px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite swing ">
                             <img width="170" height="170"
                                 src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/113652/2019/0806/111/c133d764-fc33-4fca-b514-a07078da0f88_340x340_90.jpg"
                                 alt="">
@@ -279,7 +279,7 @@
                             <span
                                 style="position:absolute; top: 211px; left: 90px; font-size: 16px; background: rgb(255,255,255);color: #000000;">￥59</span>
                         </div>
-                        <div style="margin-left: 20px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite flipOutY ">
+                        <div style="margin-left: 20px; position: relative; float: left; animation-duration: 5s;" class="item animated infinite swing ">
                             <img width="170" height="170"
                                 src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/137604/2019/0823/103/d9097431-d1cd-4e38-975f-7dc50a47b80d_340x340_90.jpg"
                                 alt="">
@@ -297,7 +297,7 @@
                             <span
                                 style="position:absolute; top: 211px; left: 90px; font-size: 16px; background: rgb(255,255,255);color: #000000;">￥59</span>
                         </div>
-                        <div style="margin-left: 20px; position: relative; float: left;animation-duration: 5s;" class="item animated infinite flipOutY ">
+                        <div style="margin-left: 20px; position: relative; float: left;animation-duration: 5s;" class="item animated infinite swing ">
                             <img width="170" height="170"
                                 src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/615340/2020/0402/129/c9bc71ba-592a-44c6-9d59-2ddb3c57c194_340x340_90.jpg"
                                 alt="">
